@@ -53,13 +53,15 @@ class BookSourceList {
 		# First, see if we have a custom list setup in
 		# [[Wikipedia:Book sources]] or equivalent.
 		$bstitle = Title::makeTitleSafe( NS_PROJECT, wfMsg( "booksources" ) );
-		$revision = Revision::newFromTitle( $bstitle );
-		if( $revision ) {
-			$bstext = $revision->getText();
-			if( $bstext ) {
-				$bstext = str_replace( "MAGICNUMBER", $this->mIsbn, $bstext );
-				$wgOut->addWikiText( $bstext );
-				return;
+		if( $bstitle ) {
+			$revision = Revision::newFromTitle( $bstitle );
+			if( $revision ) {
+				$bstext = $revision->getText();
+				if( $bstext ) {
+					$bstext = str_replace( "MAGICNUMBER", $this->mIsbn, $bstext );
+					$wgOut->addWikiText( $bstext );
+					return;
+				}
 			}
 		}
 
