@@ -625,6 +625,8 @@ fully support the editing toolbar, but was found to be too confusing.
   still be operated if the text is hostile.
 * (bug 5013) Check for existence on "return to" links
 * Removed trailing whitespace on a bunch more messages.
+* Fix missing bad title check in Special:Booksources
+* Remove empty booksources string in fy
 
 
 === Caveats ===
